--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,12 +48,14 @@
   <ItemGroup>
      <Compile Include="Assets\Script\AutoDestroy.cs" />
      <Compile Include="Assets\Script\ButtonScript.cs" />
+     <Compile Include="Assets\Script\DestroyPa.cs" />
      <Compile Include="Assets\Script\FireBullet.cs" />
      <Compile Include="Assets\Script\PlayerController.cs" />
      <Compile Include="Assets\Script\PlayerMove.cs" />
      <Compile Include="Assets\Script\SawController.cs" />
      <Compile Include="Assets\Script\ScrollingObject.cs" />
      <Compile Include="Assets\SimpleParticlePack\Scripts\ParticleTester.cs" />
+     <Compile Include="Assets\TimeControl.cs" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
