--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,6 +50,7 @@
      <Compile Include="Assets\Script\ButtonScript.cs" />
      <Compile Include="Assets\Script\DestroyPa.cs" />
      <Compile Include="Assets\Script\FireBullet.cs" />
+     <Compile Include="Assets\Script\GamePlayController.cs" />
      <Compile Include="Assets\Script\PlayerController.cs" />
      <Compile Include="Assets\Script\PlayerMove.cs" />
      <Compile Include="Assets\Script\SawController.cs" />
