--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,9 +48,12 @@
   <ItemGroup>
      <Compile Include="Assets\Script\AutoDestroy.cs" />
      <Compile Include="Assets\Script\ButtonScript.cs" />
+     <Compile Include="Assets\Script\Collectable.cs" />
      <Compile Include="Assets\Script\DestroyPa.cs" />
+     <Compile Include="Assets\Script\Door.cs" />
      <Compile Include="Assets\Script\FireBullet.cs" />
      <Compile Include="Assets\Script\GamePlayController.cs" />
+     <Compile Include="Assets\Script\MainMenu.cs" />
      <Compile Include="Assets\Script\PlayerController.cs" />
      <Compile Include="Assets\Script\PlayerMove.cs" />
      <Compile Include="Assets\Script\SawController.cs" />
@@ -61,7 +64,6 @@
      <Compile Include="Assets\Script\restartGame.cs" />
      <Compile Include="Assets\SimpleParticlePack\Scripts\ParticleTester.cs" />
      <Compile Include="Assets\TimeControl.cs" />
-     <Compile Include="Assets\mute.cs" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
