--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -73,6 +73,7 @@
      <Compile Include="Assets\Script\Enemy\enemyDamage.cs" />
      <Compile Include="Assets\Script\Enemy\enemyHealth.cs" />
      <Compile Include="Assets\Script\Enemy\enemyMovementController.cs" />
+     <Compile Include="Assets\Script\GameManager\AudioManager.cs" />
      <Compile Include="Assets\Script\GameManager\ButtonScript.cs" />
      <Compile Include="Assets\Script\GameManager\CoinCollect.cs" />
      <Compile Include="Assets\Script\GameManager\CoinManager.cs" />
